exports[`PostListItem React component Renders Evented Post (Event) correctly 1`] = `
<div
  className="item">
  <div
    className="date">
    <time
      className="time"
      dateTime="2016-08-20T00:00:00-07:00">
      Sat, Aug 20, 2016
    </time>
  </div>
  <a
    className="textlink"
    href={undefined}
    onClick={[Function bound handleClick]}
    style={Object {}}
    target={undefined}>
    <span
      className="title">
      Another AI Conference
    </span>
  </a>
  <p
    className="paragraph">
    Quick Synopsis or First Paragraph
    ...
  </p>
  <div
    className="author">
    <span
      className="subtle">
      <span
        className="avatar">
        <img
          alt="Alan Turing"
          className="image border round"
          onClick={undefined}
          src="filename.ext"
          title="Alan Turing" />
      </span>
      Alan Turing
      <span
        className="spacer">
        •
      </span>
      Evangelist
    </span>
  </div>
</div>
`;

exports[`PostListItem React component Renders Link stub (Press Link) correctly 1`] = `
<div
  className="item">
  <div
    className="date">
    <time
      className="time"
      dateTime="2016-07-10T00:00:00-07:00">
      Sun, Jul 10, 2016
    </time>
  </div>
  <a
    className="textlink"
    href="http://superblog.com"
    onClick={[Function instrumentOnClick]}
    target={undefined}>
    <span
      className="title">
      Super Blog on Numenta and AI
    </span>
  </a>
  <p
    className="paragraph">
    Intro to the full text.
    ...
  </p>
  <div
    className="author">
    <span
      className="subtle">
      <span
        className="avatar">
        <img
          alt="Blogger Uno"
          className="image border round"
          onClick={undefined}
          src="filename.ext"
          title="Blogger Uno" />
      </span>
      Blogger Uno
      <span
        className="spacer">
        •
      </span>
      SuperBlog
    </span>
  </div>
</div>
`;

exports[`PostListItem React component Renders Normal Post (Blog, Press Release, etc.) correctly 1`] = `
<div
  className="item">
  <div
    className="date">
    <time
      className="time"
      dateTime="2016-09-30T00:00:00-07:00">
      Fri, Sep 30, 2016
    </time>
  </div>
  <a
    className="textlink"
    href={undefined}
    onClick={[Function bound handleClick]}
    style={Object {}}
    target={undefined}>
    <span
      className="title">
      Calculus of the Nervous System
    </span>
  </a>
  <p
    className="paragraph">
    Quick quip or intro to the full text.
    ...
  </p>
  <div
    className="author">
    <span
      className="subtle">
      <span
        className="avatar">
        <img
          alt="Ada Lovelace"
          className="image border round"
          onClick={undefined}
          src="filename.ext"
          title="Ada Lovelace" />
      </span>
      Ada Lovelace
      <span
        className="spacer">
        •
      </span>
      Evangelist
    </span>
  </div>
</div>
`;
